--- a/index.html
+++ b/index.html
@@ -1,15 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<title>CV</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages. and somethig</p>
+	<div id="main">
+		<h1>Victor Madera Albors</h1>
+		<h3>Vigmac@hotmail.com</h3>
+		<h3><a href="Cover Letter/index.html">Cover Letter
+			</a></h3>
+		<div class="container">
+
+			<div class="container-box"><a href="#education">Education</a></div>
+			<div class="container-box"><a href="#experience">Experience</a></div>
+			<div class="container-box"><a href="#skills">Skills</a></div>
+
+		</div>
+		<h2 id="education">Education</h2>
+		<div class="contEduca">
+			<div class="contEduca-box"><span>National College of Ireland</span></li>
+				<p>Higher Diploma in Science in Computing (Software & Web Development)</p>
+			</div>
+			<div class="contEduca-box"><span>Dublin Institute of Design</span></li>
+				<p>QQI Graphic Design Skills - Level 5 , Graphic Design · (September2020 - March 2021)</p>
+			</div>
+			<div class="contEduca-box"><span>School Maria Inmaculada</span></li>
+				<p>Spanish Junior certificate · (2000 - 2004)</p>
+			</div>
+		</div>
+		<h2 id="experience">Experience</h2>
+		<h3><span>Carroll's Irish Gifts</span></h3>
+		<h3><span>Assistant Retail Manager</span> January 2016 - Present</h3>
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+		<h3><span>Manager</span> February 2014 - January 2016</h3>
+		<ul>
+			<li>Assist the Store manager in handling and motivating the team to increasesales and ensure efficiency.
+			</li>
+			<li>Managing stock levels, supplier orders and making key decisions about stockcontrol.</li>
+			<li>Analysing sales figures and forecasting future sales.</li>
+			<li>Analysing and interpreting trends to facilitate planning.</li>
+			<li>Using information technology to record sales figures, for data analysis andforward planning.</li>
+			<li>Ensuring standards for quality, customer service and health and safety aremet.</li>
+			<li>Resolving health and safety, legal and security issues.</li>
+			<li>Responding to customer complaints and comments.</li>
+			<li>Organising special promotions, displays and events</li>
+			<li>Attending and chairing meetings.</li>
+			<li>Updating colleagues on business performance, new initiatives and otherpertinent issues.</li>
+			<li>Touring the sales floor regularly, talking to colleagues and customers andidentifying or resolving
+				urgent
+				issues.</li>
+		</ul>
+		<h3><span>Sales Floor Associate</span> January 2011 - 2014</h3>
+		<ul>
+			<li>Participated in physical inventory counts every time period.</li>
+			<li>Asked open-ended questions to asses customers' needs.</li>
+			<li>Maintained cleanliness and presentation of stockroom and production floor.</li>
+			<li>Learned referenced and applied product knowledge information.</li>
+			<li>Served as cashier when needed.</li>
+			<li>Coached, and developed new hires by informing them of store protocols,procedures and how to better deal
+				with
+				customers.</li>
+
+		</ul>
+		<h2 id="skills">Skills</h2>
+		<ul class="a">
+			<li>Html 5</li>
+			<li>Css 3</li>
+			<li>JavaScript</li>
+		</ul>
+		<h2></h2>
+	</div>
 
 </body>
 
