--- a/index.html
+++ b/index.html
@@ -38,43 +38,43 @@
 			</div>
 		</div>
 	</nav>
-	<div id="carouselExampleCaptions" class="carousel slide h-20" data-bs-ride="false">
+	<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
 		<div class="carousel-indicators">
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
 				aria-current="true" aria-label="Slide 1"></button>
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
 				aria-label="Slide 2"></button>
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
 				aria-label="Slide 3"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+				aria-label="Slide 4"></button>
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="images/screenCoding.jpg" class="d-block w-100" alt="...">
+				<img src="images/screenCoding-adjust.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>First slide label</h5>
-					<p>Some representative placeholder content for the first slide.</p>
+					<!-- <h5>First slide label</h5>
+					<p>Some representative placeholder content for the first slide.</p> -->
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="images/cables.jpg" class="d-block w-100" alt="...">
+				<img src="images/cables-adjust.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>Second slide label</h5>
-					<p>Some representative placeholder content for the second slide.</p>
+
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="images/JavaSript.jpg" class="d-block w-100" alt="...">
+				<img src="images/JavaSript-adjust.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>Third slide label</h5>
-					<p>Some representative placeholder content for the third slide.</p>
+
 				</div>
-				<div class="carousel-item">
-					<img src="images/Cyberpunk.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Third slide label</h5>
-						<p>Some representative placeholder content for the third slide.</p>
-					</div>
+			</div>
+			<div class="carousel-item">
+				<img src="images/Cyberpunk-adjust.jpg" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+
 				</div>
+
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
 				data-bs-slide="prev">
@@ -87,7 +87,61 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
-		<!-- <div id="main">
+	</div>
+	<h2 class="display-2 text">Education</h2>
+	<div class="container pt-4">
+		<div class="row">
+
+			<div class="col-lg">
+				<p>
+					<button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#NCI"
+						aria-expanded="false" aria-controls="collapseWidthExample">
+						National College of Ireland
+					</button>
+				</p>
+				<div style="min-height: 120px;">
+					<div class="collapse collapse-horizontal" id="NCI">
+						<div class="card card-body">
+							Higher Diploma in Science in Computing (Software & Web Development)
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg ">
+				<p>
+					<button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#DID"
+						aria-expanded="false" aria-controls="collapseWidthExample">
+						Dublin Institute of Design
+					</button>
+				</p>
+				<div style="min-height: 120px;">
+					<div class="collapse collapse-horizontal" id="DID">
+						<div class="card card-body">
+							QQI Graphic Design Skills - Level 5 , Graphic Design · (September2020 - March 2021)
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg">
+				<p>
+					<button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#SMI"
+						aria-expanded="false" aria-controls="collapseWidthExample">
+						School Maria Inmaculada
+					</button>
+				</p>
+				<div style="min-height: 120px;">
+					<div class="collapse collapse-horizontal" id="SMI">
+						<div class="card card-body">
+							Spanish Junior certificate · (2000 - 2004)
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	</div>
+	<!-- <div id="main">
 		<h1>Victor Madera Albors</h1>
 		<h3>Vigmac@hotmail.com</h3>
 		<h3><a href="Cover Letter/index.html">Cover Letter
@@ -158,9 +212,9 @@
 		</ul>
 		<h2></h2>
 	</div>-->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-			crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
