--- a/GitHubFiles/week8 lab/index.html
+++ b/GitHubFiles/week8 lab/index.html
@@ -9,6 +9,17 @@
 
 <body>
 
+    <div>
+        <h1>Welcome to our RPS game</h1>
+        <h4 id="userDisplay"></h4>
+        <h4 id="comDisplay"></h4>
+        <h4 id="outcome"></h4>
+    </div>
+    <button onclick="input('rock')">Rock</button>
+    <button onclick="input('paper')">Paper</button>
+    <button onclick="input('scissors')">Scissors</button>
+
+    <script src="RockPaperSissors.js"></script>
 </body>
 
 </html>
