--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="Cover Letter/Cover Letter.html">Cover letter</a>
 					</li>
+
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
@@ -46,6 +47,18 @@
 									href="https://github.com/VMaderaAlbors/VMaderaAlbors.github.io">GitHub</a></li>
 							<li><a target="_blank" class="dropdown-item"
 									href="https://victormaderaeportfolio.wordpress.com/">WordPress</a></li>
+						</ul>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+							aria-expanded="false">
+							Labs
+						</a>
+						<ul class="dropdown-menu">
+							<li><a target="_blank" class="dropdown-item"
+									href="./GitHubFiles/week8 lab/index.html">Week8</a>
+							</li>
+
 						</ul>
 					</li>
 				</ul>
