--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
 							<li><a target="_blank" class="dropdown-item"
 									href="./GitHubFiles/week8 lab/index.html">Week8</a>
 							</li>
+							<li><a target="_blank" class="dropdown-item" href="./GitHubFiles/Week9 lab/index.html">Week9
+									part1</a>
+							</li>
+							<li><a target="_blank" class="dropdown-item"
+									href="./GitHubFiles/Week9 lab/subjects.html">Week9 part2</a>
+							</li>
+
+
 
 						</ul>
 					</li>
