--- a/GitHubFiles/Project folder/index.html
+++ b/GitHubFiles/Project folder/index.html
@@ -9,17 +9,20 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/homeStylesheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images/Logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                Bootstrap
+                <img src="images/Logo.svg" alt="Logo" height="100" class="d-inline-block align-text-top">
+                <p class="tagline">Developing solutions</p>
             </a>
+            <h1 class="text-start">E&V</h1>
+
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,16 +30,19 @@
             </button>
             <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <li class="nav-item m-5">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                    <li class="nav-item m-5">
+                        <a class="nav-link" href="#">Services</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                    <li class="nav-item m-5">
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item m-5">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Dropdown link
@@ -45,7 +51,7 @@
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                 </ul>
             </div>
@@ -55,24 +61,22 @@
     <div class="header-home ">
         <video class="videoPlayer object-fit-contain" autoplay muted loop id="myVideo">
             <source src="images/pexels-rostislav-uzunov-9629254 (1080p).mp4" type="video/mp4">
-            <!-- <source src="movie.ogg" type="video/ogg"> -->
+
             Your browser does not support the video tag.
         </video>
         <div class="over">
             <div class="inner">
-                <h1>Hello here</h1>
+                <h1 class="display-2">E&V creates custom WEB and
+                    MOBILE software focusing on your
+                    business
+                </h1>
                 <button class="button">Explore</button>
             </div>
 
         </div>
     </div>
-    <!-- <div class="over">
-        <div class="inner">
-            <h1>Hello here</h1>
-            <button class="button">Explore</button>
-        </div>
 
-    </div> -->
+
 
     <div class="main">
 
@@ -86,101 +90,113 @@
             </p>
             <a href=""></a><button class="button">Explore</button></a>
             <br>
-            <div class="background"> </div>
-            <div class="advantages container py-5">
-                <h2>Our advantages</h2>
-                <div class="g-col-3">
+            <div class="background">
+                <div class="advantages py-5">
+                    <h2>Our advantages</h2>
+
                     <div class="row">
-                        <div class="col w-300 h-100">
+                        <div class="col-lg-6 col-sm-0 ">
                             <img class="rounded " src="images/pexels-christina-morillo-1181676.jpg" width="100%" alt="">
                         </div>
-                        <div class="col">
-                            <h3>Placeholder</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum provident maiores
-                                aspernatur minus dignissimos adipisci nostrum earum eligendi quae. Natus obcaecati
-                                adipisci
-                                expedita ut labore reiciendis neque accusamus debitis!</p>
+                        <div class="col-lg-6 col-sm-0 ">
+                            <h3 class="display-4">Ethics</h3>
+                            <p class="text-start ps-5">We aim to satisfy what ever expectation you have of your project,
+                                we deliver in a manner that we both understand the direction is taking, because we been
+                                in your shoes and understand the need for perfect and clear comunication</p>
                         </div>
                     </div>
+
 
                 </div>
             </div>
-            <br>
-            <div class="row py-5">
-                <div class="col-sm-3 mb-3 mb-sm-0">
-                    <div class="card" style="width: 18rem;">
-                        <img src="images/pexels-oluwaseun-duncan-226232.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+            <div>
+                <br>
+                <div class="row m-auto  py-5">
+                    <div class="col-lg-3 col-md-5 col-sm-0 ">
+                        <div class="card">
+                            <a href="">
+                                <img src="images/pexels-oluwaseun-duncan-226232.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text" style="height: 18rem;">We develop applications in different
+                                        lenguajes including Java,
+                                        Phyton and C#</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-3 mb-3 mb-sm-0">
-                    <div class="card" style="width: 18rem;">
-                        <img src="images/pexels-porapak-apichodilok-369376.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                    <div class="col-lg-3 col-md-5 col-sm-0 ">
+                        <div class="card">
+                            <a href="">
+                                <img src="images/pexels-porapak-apichodilok-369376.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text" style="height: 18rem;">Diversity of platform design, taking in
+                                        consideration the divice
+                                        the product is intended for </p>
+                                </div>
+                            </a>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card" style="width: 18rem;">
-                        <img src="images/pexels-tim-douglas-6205512.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                    <div class="col-lg-3 col-md-5 col-sm-0 ">
+                        <div class="card">
+                            <a href="">
+                                <img src="images/pexels-tim-douglas-6205512.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text" style="height: 18rem;">Our products can help in a varaiety of
+                                        scenarios of the
+                                        everyday
+                                        life</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card" style="width: 18rem;">
-                        <img src="images/pexels-tom-swinnen-1034646.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                    <div class="col-lg-3 col-md-5 col-sm-0 ">
+                        <div class="card">
+                            <a href="">
+                                <img src="images/pexels-tom-swinnen-1034646.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text" style="height: 18rem;">All our products are customise to our
+                                        client
+                                        needs instead of the
+                                        other way around.</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
 
         </div>
+
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark footer">
+    </div>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark  footer">
         <div class="container-fluid bottom">
             <a class="navbar-brand" href="#">
-                <img src="images/Logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                Bootstrap
+                <img src="images/Logo.svg" alt="Logo" height="100" class="d-inline-block align-text-top">
+                <p class="tagline">Developing solutions</p>
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
+            <div class="collapse navbar-collapse flex-row" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <li class="nav-item m-5">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                    <li class="nav-item m-5">
+                        <a class="nav-link" href="#">Services</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                    <li class="nav-item m-5">
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                    <li class="nav-item m-5">
+                        <a class="nav-link" href="#">About</a>
                     </li>
+
                 </ul>
             </div>
         </div>
