--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 							<li><a target="_blank" class="dropdown-item"
 									href="./GitHubFiles/Week9 lab/subjects.html">Week9 part2</a>
 							</li>
+							<li><a target="_blank" class="dropdown-item"
+									href="./GitHubFiles/Project folder/index.html">Project</a>
+							</li>
 
 
 
