--- a/GitHubFiles/Project folder/index.html
+++ b/GitHubFiles/Project folder/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>E&V</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../images/Logo.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/homeStylesheet.css">
@@ -14,35 +15,36 @@
 </head>
 
 <body>
+    <div class="header-home ">
+        <nav class="navbar navbar-expand-lg navbar-dark ">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img id="logo" src="images/Logo.svg" alt="Logo" class="d-inline-block align-text-top">
+                    <p class="tagline">Developing solutions</p>
+                </a>
+                <h1 class="text-start">E&V</h1>
 
-    <nav class="navbar navbar-expand-lg navbar-dark ">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="images/Logo.svg" alt="Logo" height="100" class="d-inline-block align-text-top">
-                <p class="tagline">Developing solutions</p>
-            </a>
-            <h1 class="text-start">E&V</h1>
 
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item m-5">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item m-5">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item m-5">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                    <li class="nav-item m-5">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <!-- <li class="nav-item dropdown">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item m-5">
+                            <a class="nav-link active" style="color:#FFD700" aria-current="page"
+                                href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item m-5">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item m-5">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item m-5">
+                            <a class="nav-link" href="../Project folder/about/about.html">About</a>
+                        </li>
+                        <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Dropdown link
@@ -52,13 +54,13 @@
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul> -->
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    <div class="header-home ">
+
         <video class="videoPlayer object-fit-contain" autoplay muted loop id="myVideo">
             <source src="images/pexels-rostislav-uzunov-9629254 (1080p).mp4" type="video/mp4">
 
@@ -185,7 +187,7 @@
             <div class="collapse navbar-collapse flex-row" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item m-5">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" style="color:#FFD700" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item m-5">
                         <a class="nav-link" href="#">Services</a>
@@ -194,7 +196,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/GitHubFiles/Project folder/about/about.html">About</a>
                     </li>
 
                 </ul>
