--- a/GitHubFiles/Project folder/about/about.html
+++ b/GitHubFiles/Project folder/about/about.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="../images/Logo.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/homeStylesheet.css">
+    <link rel="stylesheet" href="../CSS/Stylesheet.css">
 </head>
 
 <body>
@@ -90,7 +90,6 @@
             </div>
 
         </div>
-
 
 
 
