--- a/GitHubFiles/Project folder/about/about.html
+++ b/GitHubFiles/Project folder/about/about.html
@@ -33,10 +33,10 @@
                                 href="../../../GitHubFiles/Project folder/index.html">Home</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="../Services/index.html">Services</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="../contact/contact.html">Contact</a>
                         </li>
                         <li class="nav-item m-5">
                             <a class="nav-link active" style="color:#FFD700" ;
