--- a/GitHubFiles/Project folder/index.html
+++ b/GitHubFiles/Project folder/index.html
@@ -36,10 +36,10 @@
                                 href="index.html">Home</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="../Project folder/Services/index.html">Services</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="../Project folder/contact/contact.html">Contact</a>
                         </li>
                         <li class="nav-item m-5">
                             <a class="nav-link" href="../Project folder/about/about.html">About</a>
