--- a/GitHubFiles/Project folder/Contact/contact.html
+++ b/GitHubFiles/Project folder/Contact/contact.html
@@ -12,6 +12,50 @@
     <title>Contact Us</title>
 </head>
 <body class="contact-page">
+
+     <nav class="navbar navbar-expand-lg navbar-dark ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img id="logo" src="images/Logo.svg" alt="Logo" class="d-inline-block align-text-top">
+                <p class="tagline">Developing solutions</p>
+            </a>
+            <h1 class="text-start">E&V</h1>
+
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item m-5">
+                        <a class="nav-link active" style="color:#FFD700" aria-current="page"
+                            href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item m-5">
+                        <a class="../Project folder/services/services.html" href="#">Services</a>
+                    </li>
+                    <li class="nav-item m-5">
+                        <a class="contact.html" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item m-5">
+                        <a class="nav-link" href="../Project folder/about/about.html">About</a>
+                    </li>
+                    <!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Dropdown link
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul> -->
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <img src="index.html/contact/contact.html"  
 
     <main class="container mt-4">
