--- a/GitHubFiles/Project folder/about/about.html
+++ b/GitHubFiles/Project folder/about/about.html
@@ -60,25 +60,37 @@
                 </div>
             </div>
         </nav>
-
-        <div class="over about"></div>
         <img class="img-fluid" src="../images/pexels-luis-quintero-3101527.jpg" alt="">
+        <div id="placeholder" class="over about text-center">
+            <!-- <div>
+                <div id="images">
 
-        <div class="inner row">
-            <div class="text-center">
-                <h1 class="display-3  py-5" style="color: white;">About Us</h1>
-            </div>
-            <div clas>
-                <p>We have the satifsfaction of our customers to hight steem, we know a happy client is the best
-                    reference
-                    we can get, and we delight on it.</p>
-            </div>
+                    <img src="../images/start-right.svg" alt="Start on the right">
+                </div>
+                <div id="instructions">
+                    <h4>Do you want to play?</h4>
+                </div>
+                <div id="replace">
+                    <button class="button" onclick="startGame()">play</button>
+                </div>
+            </div> -->
 
+            <div class="inner row">
+                <div class="text-center">
+                    <h1 class="display-3  py-5" style="color: white;">About Us</h1>
+                </div>
+                <div class="text-start">
+                    <p>We have the satifsfaction of our customers to hight steem, we know a happy client is the best
+                        reference
+                        we can get, and we delight on it.</p>
+                </div>
+
+            </div>
         </div>
-    </div>
 
     </div>
     <div class="main">
+        <a onclick="changeOver()">Game</a>
         <h4 class="display-3 py-5">Our clients</h4>
         <div class="row">
             <div class="col-lg-4 col-md-0">
@@ -149,6 +161,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="../js/about.js"></script>
+    <script src="../js/game.js"></script>
 </body>
 
 </html>
