--- a/GitHubFiles/Project folder/about/about.html
+++ b/GitHubFiles/Project folder/about/about.html
@@ -42,38 +42,15 @@
                             <a class="nav-link" href="../contact/contact.html">Contact</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="nav-link active" style="color:#FFD700" ;
+                            <a class="nav-link active" style="color:#FFD700"
                                 href="../../../GitHubFiles/Project%20folder/about/about.html">About</a>
-                        </li>
-                        <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul> -->
-                        </li>
+
                     </ul>
                 </div>
             </div>
         </nav>
         <img class="img-fluid" src="../images/pexels-luis-quintero-3101527.jpg" alt="">
         <div id="placeholder" class="over about text-center">
-            <!-- <div>
-                <div id="images">
-
-                    <img src="../images/start-right.svg" alt="Start on the right">
-                </div>
-                <div id="instructions">
-                    <h4>Do you want to play?</h4>
-                </div>
-                <div id="replace">
-                    <button class="button" onclick="startGame()">play</button>
-                </div>
-            </div> -->
 
             <div class="inner row">
                 <div class="text-center">
@@ -115,16 +92,7 @@
             enjoy offering them to you.
             <strong>E&V</strong> was founded by Eucarys Tatis and Victor Madera, in 2023. A
         </p>
-        <!-- <div id="scroll" class="over container-fluid ">
-            <div class="inner">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eius maxime deleniti quae officia?
-                    Minus exercitationem facilis nemo modi officia, optio necessitatibus ea ab dolorum doloremque
-                    nesciunt corporis assumenda deserunt?</p>
-                </h1>
 
-            </div>
-
-        </div> -->
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark  footer">
         <div class="container-fluid bottom">
@@ -137,7 +105,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse flex-row" id="navbarNav">
+            <div class="collapse navbar-collapse flex-row" id="footer">
                 <ul class="navbar-nav">
                     <li class="nav-item m-5">
                         <a class="nav-link" aria-current="page"
@@ -150,7 +118,7 @@
                         <a class="nav-link" href="../contact/contact.html">Contact</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link active" style="color:#FFD700" ;
+                        <a class="nav-link active" style="color:#FFD700"
                             href="../../../GitHubFiles/Project%20folder/about/about.html">About</a>
                     </li>
                 </ul>
