--- a/GitHubFiles/Project folder/index.html
+++ b/GitHubFiles/Project folder/index.html
@@ -45,17 +45,7 @@
                         <li class="nav-item m-5">
                             <a class="nav-link" href="../Project%20folder/about/about.html">About</a>
                         </li>
-                        <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul> -->
-                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -155,7 +145,7 @@
                     </div>
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
                         <div class="card">
-                            <a href="../Project folder/about/about.html">
+                            <a href="../Project%20folder/about/about.html">
                                 <img src="images/pexels-tom-swinnen-1034646.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">All our products are customise to our
@@ -174,7 +164,7 @@
 
     </div>
 
-    </div>
+
     <nav class="navbar navbar-expand-lg navbar-dark  footer">
         <div class="container-fluid bottom">
             <a class="navbar-brand" href="index.html">
