--- a/GitHubFiles/Project folder/Contact/contact.html
+++ b/GitHubFiles/Project folder/Contact/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Stylesheet.css">
+    <link rel="stylesheet" href="../CSS/Stylesheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <meta name="description" content="Contact us to inquire about our services. Reach out through our contact form or find our contact details. We are here to assist you and answer any questions you may have. Connect with us today!">
@@ -30,10 +30,10 @@
                 <ul class="navbar-nav">
                     <li class="nav-item m-5">
                         <a class="nav-link active" style="color:#FFD700" aria-current="page"
-                            href="index.html">Home</a>
+                         href="../../../GitHubFiles/Project folder/index.html">Home</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="../Project folder/services/services.html" href="#">Services</a>
+                        <a class="nav-link" href="../Services/index.html">Services</a>
                     </li>
                     <li class="nav-item m-5">
                         <a class="contact.html" href="#">Contact</a>
@@ -146,7 +146,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
 
