--- a/GitHubFiles/Project folder/Services/index.html
+++ b/GitHubFiles/Project folder/Services/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="We have a wide offer of web design in Irelan services to help you get your small business online.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../CSS/Stylesheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   
@@ -32,16 +32,16 @@
                     <ul class="navbar-nav">
                         <li class="nav-item m-5">
                             <a class="nav-link active" style="color:#FFD700" aria-current="page"
-                                href="index.html">Home</a>
+                               href="../../../GitHubFiles/Project%folder/index.html">Home</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="services.html" href="#">Services</a>
+                          <a class="index.html" href="#">Services</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="../Project folder /Contact/contact.html" href="#">Contact</a>
+                           <a class="nav-link" href="../Contact/contact.html">Contact</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="nav-link" href="../Project folder/about/about.html">About</a>
+                           <a class="nav-link" href="../Project%folder/about/about.html">About</a>
                         </li>
                         <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -152,7 +152,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 
   
 
