--- a/GitHubFiles/Project folder/Services/index.html
+++ b/GitHubFiles/Project folder/Services/index.html
@@ -21,8 +21,10 @@
                     <img id="logo" src="images/Logo.svg" alt="Logo" class="d-inline-block align-text-top">
                     <p class="tagline">Developing solutions</p>
                 </a>
-                <h1 class="text-start">E&V</h1>
-
+        
+                    < h1 E&V class="text-start">
+                    <h1  </h1>
+        
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,8 +96,8 @@
                 <h2>ECOMMERCE WEBSITE</h2>
                 <br>
                 <br>
-                <p>Perfect if you are looking for a site to start selling and taking payments online. 
-                <p></p>If this is something you need, please don't hesitate to get in touch to discuss your next plan or project.</p>
+                <p>Perfect if you are looking for a site to start selling and taking payments online.</p> 
+                <p>If this is something you need, please don't hesitate to get in touch to discuss your next plan or project.</p>
                 <br>
             </div>
         </div>
