--- a/GitHubFiles/Project folder/Services/index.html
+++ b/GitHubFiles/Project folder/Services/index.html
@@ -54,7 +54,7 @@
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul> -->
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -78,7 +78,7 @@
             <div class="col-md-8 custom-box">
                 <h2>STATIC WEBSITE</h2>
                 <br>
-                    This is the perfect option for read-only, resumes, brochures, or informational websites</p>
+                    <p> This is the perfect option for read-only, resumes, brochures, or informational websites</p>
                      <p>It doesn't require personalized content or frequent updates</p> 
                      <p>Contact us to learn more about my skills and how we can implement them in your project</p>
             </div>
