--- a/GitHubFiles/Project folder/Services/index.html
+++ b/GitHubFiles/Project folder/Services/index.html
@@ -14,11 +14,11 @@
 </head>
 <body>
 
-      <div class="header-home ">
+     
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img id="logo" src="images/Logo.svg" alt="Logo" class="d-inline-block align-text-top">
+                    <img id="logo" src="../images/Logo.svg" alt="Logo" class="d-inline-block align-text-top">
                     <p class="tagline">Developing solutions</p>
                 </a>
                     <h1 class="text-start">E&V</h1>
