--- a/GitHubFiles/Project folder/Services/index.html
+++ b/GitHubFiles/Project folder/Services/index.html
@@ -42,7 +42,7 @@
                            <a class="nav-link" href="../Contact/contact.html">Contact</a>
                         </li>
                         <li class="nav-item m-5">
-                           <a class="nav-link" href="../Project%folder/about/about.html">About</a>
+                           <a class="nav-link" href="../about/about.html">About</a>
                         </li>
                         <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
