--- a/GitHubFiles/Project folder/Contact/contact.html
+++ b/GitHubFiles/Project folder/Contact/contact.html
@@ -39,7 +39,7 @@
                         <a class="contact.html" href="#">Contact</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="../Project folder/about/about.html">About</a>
+                        <a class="nav-link" href="../about/about.html">About</a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
