--- a/GitHubFiles/Project folder/Contact/contact.html
+++ b/GitHubFiles/Project folder/Contact/contact.html
@@ -33,7 +33,7 @@
                          href="../../../GitHubFiles/Project folder/index.html">Home</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="../Services/index.html">Services</a>
+                        <a class="nav-link" href="../Services/services.html">Services</a>
                     </li>
                     <li class="nav-item m-5">
                         <a class="contact.html" href="#">Contact</a>
