--- a/GitHubFiles/Project folder/Services/services.html
+++ b/GitHubFiles/Project folder/Services/services.html
@@ -36,10 +36,12 @@
                                href="../../../GitHubFiles/Project folder/index.html">Home</a>
                         </li>
                         <li class="nav-item m-5">
-                          <a class="index.html" href="#">Services</a>
+                          <a class="nav-link active" style="color:"#FFD700"
+                         <href="#">Services</a>
                         </li>
                         <li class="nav-item m-5">
-                           <a class="nav-link" href="../Contact/contact.html">Contact</a>
+                           <a class="nav-link active" style="color:"#FFD700"
+                            <href="../Contact/contact.html">Contact</a>
                         </li>
                         <li class="nav-item m-5">
                            <a class="nav-link active" style="color:"#FFD700" 
