--- a/GitHubFiles/Project folder/Services/services.html
+++ b/GitHubFiles/Project folder/Services/services.html
@@ -44,7 +44,7 @@
                             <href="../Contact/contact.html">Contact</a>
                         </li>
                         <li class="nav-item m-5">
-                           <a class="nav-link active" <href="../about/about.html">About</a>
+                           <a class="nav-link" <href="../about/about.html">About</a>
                         </li>
                         <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
