--- a/GitHubFiles/Project folder/Services/services.html
+++ b/GitHubFiles/Project folder/Services/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="We have a wide offer of web design in Irelan services to help you get your small business online.">
+    <meta name="description" content=" We have a wide offer of web design in Irelan services to help you get your small business online.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../CSS/Stylesheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald&display=swap">
@@ -32,8 +32,7 @@
                 <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item m-5">
-                            <a class="nav-link active" style="color:#FFD700" aria-current="page"
-                               href="../../../GitHubFiles/Project folder/index.html">Home</a>
+                            <a class="nav-link" href="../../../GitHubFiles/Project folder/index.html">Home</a>
                         </li>
                         <li class="nav-item m-5">
                           <a class="nav-link active" style="color:"#FFD700"
