--- a/GitHubFiles/Project folder/Contact/contact.html
+++ b/GitHubFiles/Project folder/Contact/contact.html
@@ -36,7 +36,8 @@
                         <a class="nav-link" href="../Services/services.html">Services</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="contact.html" href="#">Contact</a>
+                        <a class="nav-link active" style="color:"#FFD700" 
+                        <href="#">Contact</a>
                     </li>
                     <li class="nav-item m-5">
                         <a class="nav-link" href="../about/about.html">About</a>
