--- a/GitHubFiles/Project folder/about/about.html
+++ b/GitHubFiles/Project folder/about/about.html
@@ -91,7 +91,7 @@
                 <img src="../images/Logo.svg" alt="Logo" height="100" class="d-inline-block align-text-top">
                 <p class="tagline">Developing solutions</p>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#footer"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
