--- a/GitHubFiles/Project folder/Contact/contact.html
+++ b/GitHubFiles/Project folder/Contact/contact.html
@@ -63,7 +63,7 @@
              <br>
              <br>
             
-            <form id="contact-form">
+            <form id="contact-form" onsubmit="return validateForm()">
             <!-- Dropdown (Select) -->
               <div class="form-group">
 
