--- a/GitHubFiles/Project folder/Contact/contact.html
+++ b/GitHubFiles/Project folder/Contact/contact.html
@@ -62,8 +62,7 @@
              <p class="centered">We will come back to you as soon as possible</p>
              <br>
              <br>
-            
-            <form id="contact-form" onsubmit="return validateForm()">
+            <form id="contact-form" onsubmit="return validateForm(event)">
             <!-- Dropdown (Select) -->
               <div class="form-group">
 
